# Observo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.railway/: celery-fast.toml  celery-slow.toml  celery.toml  observo.toml
observo/: manage.py
observo/analytics/: admin.py  apps.py  enums.py  models.py  signals.py  urls.py
observo/analytics/actions/: notify.py
observo/analytics/api/: filters.py  serializers.py  views.py
observo/analytics/migrations/: 0001_initial.py  0002_rename_b_count_survey_threshold_and_more.py  0003_alter_survey_client_ip_hash_alter_survey_threshold_and_more.py  0004_meeting_invitee_uri_meeting_uri.py  0005_rename_date_meeting_finish_meeting_name_and_more.py  0006_alter_meeting_finish_alter_meeting_start.py  0007_meeting_firstname_meeting_lastname_meeting_timezone.py  0008_meeting_nickname.py  0009_contact_notified.py  0010_survey_website.py  0011_survey_eager_to_pay.py  0012_remove_survey_threshold.py  0013_survey_geo_location.py  0014_rename_geo_location_survey_geolocation.py  0015_alter_survey_user_agent.py  0016_contact_active_subscription.py  0017_alter_contact_active_subscription.py
observo/analytics/tasks/: __init__.py  notify.py
observo/analytics/templates/email/: notify.html  survey_created.html
observo/analytics/tests/: factories.py  test_models.py
observo/analytics/tests/test_api/: test_views.py
observo/analytics/tests/test_utils/: test_functions.py
observo/analytics/utils/: functions.py
observo/data/: prompts.json
observo/observo/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
observo/opportunity/: admin.py  models.py  urls.py
observo/opportunity/api/: views.py
observo/opportunity/management/commands/: fill.py  inject.py  vectorize.py
observo/opportunity/migrations/: 0001_initial.py  0002_opportunity_created_at_opportunity_source_and_more.py  0003_alter_opportunity_categories_and_more.py  0004_alter_opportunity_awards.py  0005_alter_opportunity_funding.py  0006_alter_opportunity_funding.py  0007_alter_opportunity_closed.py  0008_alter_opportunity_options.py  0009_opportunity_applications_opportunity_success_rate.py  0010_opportunity_injection_date.py  0011_alter_opportunity_opened.py  0012_alter_opportunity_closed.py  0013_opportunity_link.py  0014_alter_opportunity_link.py  0015_alter_opportunity_injection_date.py
observo/search/: admin.py  apps.py  enums.py  models.py  prompts.py  signals.py  urls.py
observo/search/actions/: fetch_summary_action.py  manual_outline_request_actions.py  mark_websites_as_test_action.py  merge_websites_action.py  rerun_generation.py  send_outline_action.py  website_manual_outline_action.py  website_outline_action.py
observo/search/api/: serializers.py  views.py
observo/search/management/commands/: setup.py
observo/search/migrations/: 0001_initial.py  0002_remove_website_task.py  0003_alter_website_url.py  0004_match.py  0005_alter_match_proposals.py  0006_notification.py  0007_notification_notified.py  0008_alter_website_url.py  0009_alter_notification_email_outline.py  0010_outline_owner.py  0011_alter_outline_notification.py  0012_outline_title_alter_outline_notification.py  0013_remove_outline_owner_notification_owner_and_more.py  0014_notification_ready.py  0015_workflow_prompt.py  0016_alter_prompt_options_alter_prompt_return_variable.py  0017_alter_match_website.py  0018_outline_opportunity.py  0019_notificationemailblock.py  0020_website_test.py  0021_website_grantflow.py  0022_manualoutlinerequest.py  0023_alter_manualoutlinerequest_created_at_and_more.py
observo/search/tasks/: __init__.py  match.py  notify.py  outline.py  scrape.py
observo/search/templates/admin/: website_single_outline.html
observo/search/templates/email/: _grants_list.html  _outline_main_default.html  generation.html  outline.html
observo/search/templatetags/: email_blocks.py
observo/utils/: config.py  functions.py  mailer.py  models.py  pdf_generator.py  vector_db.py
observo/utils/clients/: __init__.py  calendly_client.py  gemini_client.py
observo/utils/tests/: test_clients.py  test_functions.py
